--- a/dj/main/templates/clients.html
+++ b/dj/main/templates/clients.html
@@ -8,7 +8,8 @@
             <tr class="row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}" > <td> {{client.sequence}} </td><td><a href="{% url client client.slug %}">{{ client.name }}</a></td></tr>
         {% endfor %}
     </table>
-    <div id=logged_in>
+
+    <div class=logged-in>
     <form action="" method="POST"> 
     <table>
     {{ client_form }}
