use /media/js/urlify.js to construct filename from title

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -6,8 +6,10 @@
 
 <script type="text/javascript" src="/my_admin/jsi18n/"></script>
 <script type="text/javascript" src="/media/js/core.js"></script>
-<script type="text/javascript" src="/static/js/jquery.js"></script>
-<script type="text/javascript" src="/static/js/fnitize.js"></script>
+<script type="text/javascript" src="/media/js/urlify.js"></script>
+<script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.js"></script>
+<script type="text/javascript" src="{{MEDIA_URL}}/js/fnitize.js"></script>
+
 {{ episode_form.media }}
 {% endblock %}
 
