fnified all slugs

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -2,8 +2,10 @@
 <head>
 {% block head %}{% endblock %}
 
+<script type="text/javascript" src="/media/js/urlify.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/login_form.js"></script>
+<script type="text/javascript" src="{{MEDIA_URL}}/js/fnitize.js"></script>
 
 </head>
 
