pull the admin cal, add some math to roll the datetime forward

--- a/dj/main/templates/clients.html
+++ b/dj/main/templates/clients.html
@@ -10,7 +10,7 @@
     </table>
 
     <div class=logged-in>
-    <form action="" method="POST"> 
+    <form action="" method="POST"> {% csrf_token %} 
     <table>
     {{ client_form }}
     </table>
