--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -6,11 +6,11 @@
 
 <script type="text/javascript" src="/media/js/core.js"></script>
 
-{{ episode_form.media }}
+{# { episode_form.media } #}
+<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.datepicker.js"></script>
 {% endblock %}
 
 {% block content %}
-
 
     <table>
         {% for location in locations %}
