--- a/dj/main/templates/clients.html
+++ b/dj/main/templates/clients.html
@@ -10,6 +10,7 @@
     </table>
 
     <div class=logged-in>
+    <h1>Enter Client:</h1>
     <form action="" method="POST"> {% csrf_token %} 
     <table>
     {{ client_form }}
