--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -5,7 +5,9 @@
 <script type="text/javascript" src="/media/js/urlify.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/login_form.js"></script>
+<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.datepicker.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/fnitize.js"></script>
+<script type="text/javascript" src="{{MEDIA_URL}}/js/datetimepicker_css.js"></script>
 
 </head>
 
