--- a/dj/main/templates/locations.html
+++ b/dj/main/templates/locations.html
@@ -12,6 +12,7 @@
         {% endfor %}
     </table>
     <div class=logged-in>
+    <h1>Enter Loation:</h1>
     <form action="" method="POST">{% csrf_token %}
     <table border=1>
     {{ location_form }}
