--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -45,7 +45,8 @@
       <a href="javascript: NewCssCal('id_start','yyyymmdd','arrow',true,24,false)">start</a>
       <a href="javascript: NewCssCal('id_end','yyyymmdd','arrow',true,24,false)">end</a>
      
-<table border=1>
+     <input type="text" name="start" value="2009-12-03" id="foo" />  
+     <table border=1>
      {{ episode_form }}
 
      </table>
