--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -9,7 +9,7 @@
 
 <a href="/main/E/{{ nextepisode.id }}">Next: {{nextepisode.name }}</a>
 
-<h2>Location: {{episode.location}}</h2>
+<h2>ID: {{episode.id}} Location: {{episode.location}}</h2>
 <h2>Title: {{episode.name}}</h2>
 <h2>Author(s): {{episode.authors}}</h2>
 <a href="/admin/main/episode/{{episode.id}}/">admin</a> 
@@ -29,7 +29,11 @@
 </table>
 
 <form action="" method="POST">{% csrf_token %}
-{{ episode_form }}  2=ready to encode, 3=ready to post
+<table border=1>
+<tbody>
+{{ episode_form }}  
+</tbody>
+</table>
 {{ clrfformset.management_form }}
 
 <table border=1>
@@ -84,9 +88,7 @@
     <tr>
     <td>{{cl.raw_file.ocrtext}}</td>
     {# <td> <video src="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogg" controls='' ></video> </td> #}
-    <td> <video src="file:///media/disk/Video/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogg" controls ></video> </td> 
     {#  <td> <video src="file:///home/juser/foo.ogg" ></video> </td> #}
-  <td> <img src="file:///home/juser/foo.png"> </td> #}
 
     </tr>
   </tbody>
