--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -54,8 +54,8 @@
     {# <a href="S/{{show.slug}}/F/{{cl.raw_file.filename}}">{{ cl.raw_file.filename }}</a><br> #}
     <a href="file:///home/carl/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}">{{ cl.raw_file.filename }}</a><br>
     {{ clrfform.sequence.label_tag }}{{ clrfform.sequence }}
-    <a href="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png">
-    <img src="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png" width=200> </a>
+    <a href="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.pnm">
+    <img src="/site_media/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.pnm" width=200> </a>
     </td>
 
     <td>
@@ -72,7 +72,10 @@
          {{ clrfform.split.label_tag }}{{ clrfform.split }}</td>
       </tr>
       <tr> <td>Comments:</td> <td>{{clrfform.rf_comment}}</td> <td>{{clrfform.cl_comment}}</td> </tr>
-      <tr> <td></td> <td></td> <td><a href="/admin/main/cut_list/{{cl.id}}">admin</a></td> </tr>
+      <tr> <td></td> 
+      <td><a href="/admin/main/raw_file/{{cl.raw_file.id}}">admin</a></td> 
+      <td><a href="/admin/main/cut_list/{{cl.id}}">admin</a></td> 
+      </tr>
 
     </tbody>
     </table>
