recording sheet works with PyCon data

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -17,6 +17,7 @@
 <tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
 <tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
 <tr><td><a href="{% url play_list show.id %}{{show.slug}}.pls">play_list</a></td></tr>
+<tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
 <tr><td><a href="{% url client client.slug %}">client</a></td></tr>
     </table>
 <hr />
