--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -14,7 +14,7 @@
 <h2>Author(s): {{episode.authors}}</h2>
 <a href="/admin/main/episode/{{episode.id}}/">admin</a> 
 <a href="/databrowse/main/episode/objects/{{episode.id}}/">databrowse</a> 
-<a href="{% url foo_list episode.id %}{{episode.slug}}.pls"">playlist</a> 
+<a href="{% url foo_list episode.id %}{{episode.slug}}.m3u">playlist</a> 
 </br>
 <table>
 <tbody>
