--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -25,14 +25,16 @@
 <hr />
     <table>
     <thead><tr>
-    <td>id</td><td>seq</td><td>start-end</td><td>duration</td>
+    <td>id</td>
+    <td>loc name</td>
+    <td>start-end</td><td>duration</td>
     <td>state</td><td>episode.name</td><td>episode.authors</td>
     </tr></thead>
 
         {% for episode in episodes %}
             <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
             <td>{{episode.id}}</td>
-            <td>{{episode.sequence}}</td>
+            <td>{{episode.location}}</td>
             <td>{{episode.start|date:"D d H:i"}} - {{episode.end|date:"H:i"}}</td>
             <td>{{episode.start|timesince:episode.end}}</td>
             <td>{{episode.state}}</td>
