--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -2,63 +2,67 @@
 {% extends "base.html" %}
 
 {% block head %}
-<title>veyepar - Show: {{client.name}} {{show.name}} </title>
+  <title>veyepar - Show: {{client.name}} {{show.name}} </title>
 {% endblock %}
 
 {% block content %}
-    <table>
-        {% for location in locations %}
-         <tr class="row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}" >
-         <td> {{location.sequence}} </td>
-         <td> <a href="L/{{location.slug}}/">{{ location.name }}</a> </td>
-<td><a href="/admin/main/episode/?location__id__exact={{location.id}}">admin</a></td>
-         </tr>
-        {% endfor %}
-<tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
-<tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
-<tr><td><a href="{% url play_list show.id %}{{show.slug}}.pls">play_list</a></td></tr>
-<tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
-<tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
-<tr><td><a href="{% url client client.slug %}">client</a></td></tr>
-    </table>
-<hr />
-<hr />
-    <table>
-    <thead><tr>
-    <td>id</td>
-    <td>loc name</td>
-    <td>start-end</td><td>duration</td>
-    <td>state</td><td>episode.name</td><td>episode.authors</td>
-    </tr></thead>
+  <table>
+    {% for location in locations %}
+      <tr class="row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}" >
+        <td>{{location.sequence}}</td>
+        <td><a href="L/{{location.slug}}/">{{ location.name }}</a></td>
+        <td>
+          <a href="/admin/main/episode/?location__id__exact={{location.id}}">admin</a>
+        </td>
+      </tr>
+    {% endfor %}
+    <tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
+    <tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
+    <tr><td><a href="{% url play_list show.id %}{{show.slug}}.pls">play_list</a></td></tr>
+    <tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
+    <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
+    <tr><td><a href="{% url client client.slug %}">client</a></td></tr>
+  </table>
 
-        {% for episode in episodes %}
-            <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
-            <td>{{episode.id}}</td>
-            <td>{{episode.location}}</td>
-            <td>{{episode.start|date:"D d H:i"}} - {{episode.end|date:"H:i"}}</td>
-            <td>{{episode.start|timesince:episode.end}}</td>
-            <td>{{episode.state}}</td>
-            <td><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
-            <td>{{episode.authors}}</td>
-            </tr>
-        {% endfor %}
-    </table>
+  <hr />
+  <hr />
 
-    {% if episode_form %}
-     <div class=logged-in>
-     <h1>Enter Episode:</h1>
-     <form action="" method="POST">{% csrf_token %}
-      <a href="javascript: NewCssCal('id_start','yyyymmdd','arrow',true,24,false)">start</a>
-      <a href="javascript: NewCssCal('id_end','yyyymmdd','arrow',true,24,false)">end</a>
+  <table>
+    <thead>
+      <tr>
+        <td>id</td>
+        <td>loc name</td>
+        <td>start-end</td><td>duration</td>
+        <td>state</td><td>episode.name</td><td>episode.authors</td>
+      </tr>
+    </thead>
+
+    {% for episode in episodes %}
+      <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
+        <td>{{episode.id}}</td>
+        <td>{{episode.location}}</td>
+        <td>{{episode.start|date:"D d H:i"}} - {{episode.end|date:"H:i"}}</td>
+        <td>{{episode.start|timesince:episode.end}}</td>
+        <td>{{episode.state}}</td>
+        <td><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
+        <td>{{episode.authors}}</td>
+      </tr>
+    {% endfor %}
+  </table>
+
+  {% if episode_form %}
+    <div class=logged-in>
+      <h1>Enter Episode:</h1>
+      <form action="" method="POST">{% csrf_token %}
+        <a href="javascript: NewCssCal('id_start','yyyymmdd','arrow',true,24,false)">start</a>
+        <a href="javascript: NewCssCal('id_end','yyyymmdd','arrow',true,24,false)">end</a>
      
-     <input type="text" name="start" value="2009-12-03" id="foo" />  
-     <table border=1>
-     {{ episode_form }}
-
-     </table>
-     <input type="submit" value="Save" />
-     </form>
-     </div>
-    {% endif %}
-
+        <input type="text" name="start" value="2009-12-03" id="foo" />  
+        <table border=1>
+          {{ episode_form }}
+        </table>
+        <input type="submit" value="Save" />
+      </form>
+    </div>
+  {% endif %}
 {% endblock %}
