removed obsolete code

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -17,6 +17,9 @@
 <a href="/databrowse/main/episode/objects/{{episode.id}}/">databrowse</a> 
 <a href="{% url raw_list episode.id %}{{episode.slug}}.m3u">raw-playlist</a> 
 <a href="{% url enc_list episode.id %}{{episode.slug}}.m3u">encoded-files-playlist</a> 
+{% if episode.target %}
+  <a href=http://blip.tv/file/{{episode.target}}>blip</a> 
+{% endif %}
 </br>
 <table>
 <tbody>
