--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -1,4 +1,4 @@
-{# client.html #}
+{# show.html #}
 {% extends "base.html" %}
 
 {% block head %}
@@ -14,9 +14,11 @@
 <td><a href="/admin/main/episode/?location__id__exact={{location.id}}">admin</a></td>
          </tr>
         {% endfor %}
+    </table>
+    <table>
 <tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
 <tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
-<tr><td><a href="{% url play_list show.id %}{{show.slug}}.m3u">play_list</a></td></tr>
+<tr><td><a href="{% url play_list show.id %}{{show.slug}}.m3u">play_list</a>state 3 files - encoded, ready for final review before posting.</td></tr>
 <tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
 <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
 <tr><td><a href="{% url client client.slug %}">client</a></td></tr>
