--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -1,18 +1,18 @@
 <html>
 <head>
-{% block head %}{% endblock %}
 
 <script type="text/javascript" src="/media/js/urlify.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/jquery.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/login_form.js"></script>
-<script type="text/javascript" src="http://jqueryui.com/latest/ui/ui.datepicker.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/fnitize.js"></script>
 <script type="text/javascript" src="{{MEDIA_URL}}/js/datetimepicker_css.js"></script>
+<link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}/js/spinner/JQuerySpinBtn.css" />
 
+{% block head %}{% endblock %}
 </head>
 
 <link rel="stylesheet" type="text/css" href="/media/css/base.css" />
-<link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/login_form.css" />
+<link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/login_form.css" 
 <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/main.css" />
 
 <body>
