--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -10,6 +10,8 @@ Come join us for our best meeting ever!
 When: {{episodes.0.start|date:"f A l F j, Y"}}
 Where: {{location.name}}
 
+{{show.description}}
+
 Topics
 ------
 {% for episode in episodes %} {{forloop.counter}}. {{episode.start|date:"g:i"}} {{ episode.name }} ({{episode.authors}})
