local file access, take 2

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 
 <link rel="stylesheet" type="text/css" href="/media/css/base.css" />
-<link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/login_form.css" 
+<link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/login_form.css"> 
 <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/main.css" />
 
 <body>
