--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -24,6 +24,9 @@ Details
 {{episode.authors}}
 {{episode.description}}
 {{episode.primary}}
+{% if episode.target %}
+ Video: http://carlfk.blip.tv/file/{{episode.target}}
+{% endif %}
 {% endfor %}
 
 Location
