test vid contains rendered timestamp

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -25,6 +25,7 @@
 </p>
 {% block content %}
 {% endblock %}
+<p> <a href="http://github.com/CarlFK/veyepar">Veyepar</a> Video Eyeball Processor and Review</p>
 </body>
 </html>
 
