better css, thanks Tim

--- a/dj/accounts/templates/accounts/login_form.html
+++ b/dj/accounts/templates/accounts/login_form.html
@@ -5,8 +5,8 @@
 {% else %} var auth_name = 0; {% endif %}
 </script>
 
-<div class=logged-in>
- Hi <div id=user_name>user</div>
+<div class="logged-in logged-in-stuff">
+ Hi <span id=user_name>user</span>
  <form id='logout'><input type="submit" value='Logout'></form>
 </div>
 
