--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -14,10 +14,9 @@
 <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/css/main.css" />
 
 <body>
-<p>
 {% include "accounts/login_form.html" %}
 
-<p>
+<p class="shortcuts">
 <a href="/admin/">admin</a> 
 <a href="/databrowse/">databrowse</a> 
 <a href="/main/">main</a> 
