--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -17,14 +17,15 @@
         {% endfor %}
     </table>
 {% endcomment %}
-    <table>
+
+<table class="shortcuts">
 <tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
 <tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
-<tr><td><a href="{% url play_list show.id %}{{show.slug}}.m3u">play_list</a>state 3 files - encoded, ready for final review before posting.</td></tr>
+<tr><td><a href="{% url play_list show.id %}{{show.slug}}.m3u">play_list <span style="color: #000; text-decoration: none;">state 3 files - encoded, ready for final review before posting.</span></a></td></tr>
 <tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
 <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
 <tr><td><a href="{% url client client.slug %}">client</a></td></tr>
-    </table>
+</table>
 <hr />
 
   <table>
@@ -62,9 +63,10 @@
       <h1>Enter Episode:</h1>
       <form action="" method="POST">{% csrf_token %}
         <table border=1>
+          <tr><td colspan="2"><input type="submit" value="Save" /></td></tr>
           {{ episode_form }}
+          <tr><td colspan="2"><input type="submit" value="Save" /></td></tr>
         </table>
-        <input type="submit" value="Save" />
       </form>
     </div>
   {% endif %}
