--- a/dj/static/css/login_form.css
+++ b/dj/static/css/login_form.css
@@ -4,8 +4,12 @@
 */
 
 .login_form li {   
-    float:left; 
     list-style-type:none; 
     padding: 0 5 0 0; 
+    display: inline;
+}
+
+.logged-in-stuff {
+    float: right;
 }
 
