more testing, better parsing of xml responce

--- a/dj/main/templates/meeting_announcement.html
+++ b/dj/main/templates/meeting_announcement.html
@@ -1,6 +1,6 @@
 {#Meeting  meeting_announcement.html #}
 
-{{client.name}} at  {{location.name}} {{episodes.0.start|date:"D F j, fp" }}
+ANN: {{client.name}} at  {{location.name}} {{episodes.0.start|date:"D F j, fp" }}
 <pre>
 
 {{client.name}}
