tests use blip test accont, better response handeling on posting error.

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -24,7 +24,7 @@
 <tr><td><a href="{% url play_list show.id %}{{show.slug}}.m3u">play_list <span style="color: #000; text-decoration: none;">state 3 files - encoded, ready for final review before posting.</span></a></td></tr>
 <tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
 <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
-<tr><td><a href="{% url client client.slug %}">client</a></td></tr>
+<tr><td><a href="{% url client client.slug %}">client</a> <a href="http://localhost:8080/admin/main/client/{{client.id}}/">admin</a></td></tr>
 </table>
 <hr />
 
