fixed nits found when paired with Marry

--- a/dj/main/templates/overlaping_episodes.html
+++ b/dj/main/templates/overlaping_episodes.html
@@ -13,7 +13,7 @@
             <td>{{episode.sequence}}</td>
 <td style="padding-left: {{episode.start_px}}px;">
 <div style="background: black;width:{{episode.width_px}}">.</div></td>
-            <td>{{episode.start|date:"H:i"}} - {{episode.end|date:"H:i"}}</td>
+            <td>{{episode.start|date:"D b d H:i"}} - {{episode.end|date:"H:i"}}</td>
             <td><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
             </tr>
         {% endfor %}
