--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -23,37 +23,42 @@
 <tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
 <tr><td><a href="{% url play_list show.id %}{{show.slug}}.m3u">play_list <span style="color: #000; text-decoration: none;">state 3 files - encoded, ready for final review before posting.</span></a></td></tr>
 <tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
-<tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
-<tr><td><a href="{% url client client.slug %}">client</a> <a href="http://localhost:8080/admin/main/client/{{client.id}}/">admin</a></td></tr>
+<tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td><tr>
+<tr><td><a href="/admin/main/show/{{show.id}}/">show admin</a></td></tr>
+<tr><td><a href="/admin/main/client/{{client.id}}/">client admin</a></td></tr>
 </table>
 <hr />
 
   <table>
     <thead>
       <tr>
-        <td>id</td>
-        <td>seq</td>
-        <td>loc name</td>
-        <td>start-end</td>
-        <td>duration</td>
-        <td>state</td>
-        <td>episode.name</td>
-        <td>episode.authors</td>
-        <td></td>
+        <th>id</td>
+        <th>seq</td>
+        <th>loc name</td>
+        <th>start-end</td>
+        <th>duration</td>
+        <th>state</td>
+        <th>episode.name</td>
+        <th>episode.authors</td>
+        <th></th>
       </tr>
     </thead>
 
     {% for episode in episodes %}
       <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
-        <td>{{episode.id}}</td>
+        <td><a href="/admin/main/episode/{{episode.id}}/">{{episode.id}}</a></td>
         <td>{{episode.sequence}}</td>
-        <td>{{episode.location}}</td>
+        {%if location_slug %}
+          <td><a href="{% url episode_list client.slug show.slug %}">
+        {% else %}
+          <td><a href="{% url episode_list_loc client.slug show.slug episode.location.slug %}">
+        {% endif %}{{episode.location}}</a></td>
         <td>{{episode.start|date:"D d H:i"}} - {{episode.end|date:"H:i"}}</td>
         <td>{{episode.start|timesince:episode.end}}</td>
         <td>{{episode.state}}</td>
-        <td><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
-        <td>{{episode.authors}}</td>
-        <td><a href="E/{{episode.id}}/claim_lock">[LOCK]</a></td>
+        <td style="white-space:normal"><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
+        <td style="white-space:normal">{{episode.authors}}</td>
+{#        <td><a href="E/{{episode.id}}/claim_lock">[LOCK]</a></td> #}
       </tr>
     {% endfor %}
   </table>
