--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -48,11 +48,14 @@
       <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
         <td><a href="/admin/main/episode/{{episode.id}}/">{{episode.id}}</a></td>
         <td>{{episode.sequence}}</td>
+
+        <td><a href="
         {%if location_slug %}
-          <td><a href="{% url episode_list client.slug show.slug %}">
+         {% url episode_list client.slug show.slug %}
         {% else %}
-          <td><a href="{% url episode_list_loc client.slug show.slug episode.location.slug %}">
-        {% endif %}{{episode.location}}</a></td>
+         {% url episode_list_loc client.slug show.slug episode.location.slug %}
+        {% endif %}">{{episode.location}}</a></td>
+
         <td>{{episode.start|date:"D d H:i"}} - {{episode.end|date:"H:i"}}</td>
         <td>{{episode.start|timesince:episode.end}}</td>
         <td>{{episode.state}}</td>
