--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -25,6 +25,7 @@
 <tr><td><a href="{% url recording_sheets show.id %}{{show.slug}}.pdf">recording_sheets.pdf</a></td></tr>
 <tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td><tr>
 <tr><td><a href="/admin/main/show/{{show.id}}/">show admin</a></td></tr>
+<tr><td><a href="/admin/main/episode/?show__id__exact={{show.id}}">episodes admin</a></td></tr>
 <tr><td><a href="/admin/main/client/{{client.id}}/">client admin</a></td></tr>
 </table>
 <hr />
