dv preview defaults to users home dir

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -67,7 +67,7 @@
     <tr>
     <td>
     {{clrfform.clid}}
-    /home/carl/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}<br>
+    ~/Videos/veyepar/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}<br>
     <a href="file:///{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.filename}}">{{ cl.raw_file.filename }}</a><br>
     <a href="file:///{{MEDIA_ROOT}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv" target=foo>{{ cl.raw_file.basename }}.ogv</a>
     {{ clrfform.sequence.label_tag }}{{ clrfform.sequence }}
