added hooks to set options from test runner to replace command line options

--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -50,6 +50,11 @@
 </tbody>
 </table>
 <input type="submit" value="Save" />
+
+<video src ="file:///{{MEDIA_ROOT}}/{{client.slug}}/{{show.slug}}/ogv/{{episode.slug}}.ogv" controls width=200 ></video>
+<a href="file:///{{MEDIA_ROOT}}/{{client.slug}}/{{show.slug}}/ogv/{{episode.slug}}.ogv">ogv</a>
+
+<input type="submit" value="Save" />
 {{ clrfformset.management_form }}
 <table border=1>
 <tbody>
