--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -69,7 +69,11 @@
     {% endfor %}
   </table>
 
-total_hours: {{total_hours}},  total_gig: {{total_gig}}
+total episodes {{total_episodes}}<br> 
+total_hours: {{total_hours}}, total_gig: {{total_gig}}<br>
+fudge_hours: {{fudge_hours}}, fudge_gig: {{fudge_gig}}
+
+
 
   {% if episode_form %}
     <div class=logged-in>
